Fix random enchantment application order causing some to not be applied